force-app/main/default/objects/Additional_Product__c/Additional_Product__c.object-meta.xml
<CustomObject>
    <label>Additional Product</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Additional Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>