force-app/main/default/objects/Additional_Product__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Utility Closet</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Reception Desk</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Maintenance Closet</fullName>
            </value>
            <value>
                <fullName>Break Room</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>IT Closet</fullName>
            </value>
            <value>
                <fullName>Stairwell</fullName>
            </value>
            <value>
                <fullName>Hallway</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Restroom</fullName>
            </value>
            <value>
                <fullName>Wellness / Maternity Room</fullName>
            </value>
            <value>
                <fullName>Fitness Area</fullName>
            </value>
            <value>
                <fullName>Mail Room</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>Front of Building</fullName>
            </value>
            <value>
                <fullName>Back of Building</fullName>
            </value>
            <value>
                <fullName>Right Side of Building</fullName>
            </value>
            <value>
                <fullName>Left Side of Building</fullName>
            </value>
            <value>
                <fullName>Dock / Bay Door</fullName>
            </value>
            <value>
                <fullName>Courtyard</fullName>
            </value>
            <value>
                <fullName>Pool Area</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>