force-app/main/default/objects/Additional_Product__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Additional Products</relationshipLabel>
    <relationshipName>Additional_Products</relationshipName>
    <type>Lookup</type>
</CustomField>